--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="./JS/charts.js"></script>
+  <script src="/JS/charts.js"></script>
 
 
 </body>
