--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <link 
     rel="stylesheet" 
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link 
-  rel ="stylesheet" 
-  href="static/css/style.css">
+  </link> 
 </head>
 
 <body>
@@ -54,7 +52,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="/JS/charts.js"></script>
+  <script src="JS/charts.js"></script>
 
 
 </body>
