--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <link 
     rel="stylesheet" 
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  </link> 
+  </link>
+  <link 
+  rel ="stylesheet" 
+  href="static/css/style.css"></link>
 </head>
 
 <body>
